--- a/css/main.css
+++ b/css/main.css
@@ -77,38 +77,71 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-header, footer {
+header,
+footer {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
 }
+header {
+  padding: 15px 0;
+}
+
 header .content-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 0;
+}
+.header-divider {
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
 }
 header nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
+  width: 60%;
 }
 header nav ul {
   display: flex;
   justify-content: space-around;
+  width: 100%;
+}
+footer{
+  flex-direction: column;
+}
+footer p {
+  margin: 0;
 }
 footer .social-icons {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-footer .social p {
+footer .social-icons p {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
+}
+footer .contact {
+  margin-bottom: 50px;
+}
+
+footer .copyright {
+  margin: 20px 0;
+}
+
+
 .hero-area {
   display: flex;
   justify-content: center;
@@ -133,6 +166,13 @@ aside {
   align-items: center;
   flex-flow: row wrap;
 }
+
+.features p {
+  margin: 0;
+}
+.features h2 {
+  margin-bottom: 60px;
+}
 .mission {
   display: flex;
   justify-content: center;
@@ -145,6 +185,9 @@ aside {
   align-items: center;
   flex-flow: row wrap;
 }
+.contact-content p {
+  margin: 0;
+}
 .faq {
   display: flex;
   justify-content: center;
@@ -152,14 +195,42 @@ aside {
   flex-flow: row wrap;
 }
 .faq .content-wrapper {
+  margin: 50px 0 0 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
 }
+.faq h2 {
+  margin-bottom: 40px;
+}
+.faq-content {
+  margin-bottom: 50px;
+}
 .reviews {
   flex-flow: row wrap;
 }
+.reviews h2 {
+  margin-bottom: 40px;
+}
+.reviews h3 {
+  width: 55%;
+  margin: 20px 0;
+}
+
+.content-wrapper {
+  width: 80%;
+}
+
+.features article {
+  width: 63%;
+  margin: 30px 0;
+}
+
+.reviews h3 {
+  width: 60%;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
@@ -333,4 +404,3 @@ aside {
     page-break-after: avoid;
   }
 }
-
