--- a/css/main.css
+++ b/css/main.css
@@ -333,6 +333,20 @@ article img {
   width: 60%;
 }
 
+.map-container {
+  position: relative;
+  padding-bottom: 75%;
+  height: 0;
+  overflow: hidden;
+}
+.map-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
