--- a/css/main.css
+++ b/css/main.css
@@ -323,6 +323,10 @@ aside {
 .content-wrapper {
   width: 80%;
 }
+.features i {
+  font-size: 3.75em;
+  margin-bottom: 40px;
+}
 
 .features article {
   width: 63%;
