Added CSS styles

--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+
 /* General Styles */
 html {
   font-size: 16px;
@@ -91,9 +92,10 @@ body {
 ul,
 ol {
   list-style-type: none;
-  text-transform: uppercase;
-
+  margin: 0;
+  padding: 0;
 }
+
 a {
   color: #e2e3ed;
   text-decoration: none;
@@ -102,10 +104,14 @@ a {
 h2 {
   font-family: "Poppins", sans-serif;
   font-size: 1.875em;
+  font-weight: 500;
+  margin: 0;
 }
+
 h3,
 h4 {
   font-family: "Poppins", sans-serif;
+  font-weight: 500;
   margin: 20px 0;
   font-size: 1.125em;
 }
@@ -114,12 +120,15 @@ p {
   font-size: 0.875em;
   line-height: 1.285;
 }
+
 img {
   width: 100%;
 }
 
 figure {
+  margin: 0;
 }
+
 address {
   font-style: normal;
 }
@@ -127,7 +136,7 @@ address {
   width: 90%;
   margin: 50px 0;
 }
-
+/* -------------------- Base Header - Footer Styles -------------------- */
 header,
 footer {
   display: flex;
@@ -147,41 +156,49 @@ header .content-wrapper {
   flex-flow: row wrap;
   margin: 0;
 }
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
 .header-divider {
+  background: #3a3a3a;
   width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
 }
 
-
 header nav {
+  width: 60%;
+  font-size: 1.125em;
+  text-transform: uppercase;
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
-  width: 60%;
 }
+
 header nav ul {
   display: flex;
   justify-content: space-around;
   width: 100%;
 }
-header figure {
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-  padding-top: 10px;
-  padding-left: 10px;
+
+header nav ul li {
+  font-size: 1.125em;
 }
+
 footer {
+  text-align: center;
   flex-direction: column;
 }
 footer p {
   margin: 0;
-  color: #fff;
 }
+
 footer .social-icons {
   display: flex;
   justify-content: space-around;
@@ -193,9 +210,17 @@ footer h4 {
 }
 
 footer .social-icons p {
+  background-color: #527158;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+footer .social-icons p i {
+  font-size: 1.3125em;
 }
 
 footer .content-wrapper {
@@ -209,26 +234,30 @@ footer .contact {
 footer .copyright {
   margin: 20px 0;
 }
-figure {
-  margin: 0;
-}
+
+/* --------------------------- Mobile Styles - Homepage -------------------------------------------------------*/
+
+/* Hero Area */
+
 .hero-area {
-  display: flex;
-  justify-content: center;
-  flex-flow: row wrap;
   background: url("/img/unplugged-retreat.jpg") #333;
-  min-height: 500px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  color: #fff;
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+  min-height: 500px;
 }
-.hero-area h1{
+
+.hero-area h1 {
   font-size: 2.25em;
   font-family: 'Poppins', Helvetica, Arial, sans-serif;
   font-weight: 500;
   line-height: 1.2;
 }
+
+/* Aside */
 
 aside {
   display: flex;
@@ -237,9 +266,34 @@ aside {
   flex-flow: row wrap;
   background-color: #597c71;
 }
+aside .form {
+  margin-top: 30px;
+}
+input[type="text"] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+input[type="button"] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: "Poppins", Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+/* Features */
+
 .features {
-  background: url("/img/unplugged-retreat-features.jpg");
-  background-position: center;
+  background: url('../img/unplugged-retreat-features.jpg');
   background-size: cover;
   background-position: center;
   display: flex;
@@ -250,38 +304,80 @@ aside {
 .features h2 {
   margin-bottom: 60px;
 }
-.features .feature-items {
+
+.features article {
+  width: 63%;
+  margin: 30px 0;
+}
+
+.features .features-items {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+}
+
+.features i {
+  font-size: 3.75em;
+  margin-bottom: 40px;
 }
 
 .features p {
+  text-align: center;
   margin: 0;
-  color: #fff;
-}
-.features h2 {
-  margin-bottom: 60px;
-  color: #fff;
 }
 
-.mission {
+/* Reviews */
+.reviews {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-around;
   flex-flow: row wrap;
+  background-color: #2a423a;
 }
-.contact-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
+.reviews h2 {
+  margin-bottom: 40px;
 }
-.contact-content p {
-  margin: 0;
+.reviews h3 {
+  width: 55%;
+  margin: 20px 0;
 }
+
+/* ==========================================================================
+   About Page
+   ========================================================================== */
+
+   .map figure {
+    width: 100%;
+    height: 0; 
+    padding-bottom: 125%; 
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .map iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+  }
+  
+  .contact-section {
+    background-color: #2a423a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+  
+  .contact-content p {
+    margin: 0;
+  }
+  /* ==========================================================================
+   FAQ Page
+   ========================================================================== */
 .faq {
+  background-color: #527158;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -300,38 +396,16 @@ aside {
 .faq-content {
   margin-bottom: 50px;
 }
-.reviews {
-  display: flex;
-  justify-content: space-around;
-  flex-flow: row wrap;
-  background-color: #2a423a;
-}
-.reviews h2 {
-  margin-bottom: 40px;
-  color: #fff;
-}
-.reviews h3 {
-  width: 55%;
-  margin: 20px 0;
-  color: #fff;
+
+.faq-content h4 {
+  line-height: 1.333;
 }
 
-.reviews p {
-  color: #fff;
-}
 
-.content-wrapper {
+/* .content-wrapper {
   width: 80%;
 }
-.features i {
-  font-size: 3.75em;
-  margin-bottom: 40px;
-}
 
-.features article {
-  width: 63%;
-  margin: 30px 0;
-}
 
 article img {
   width: 60%;
@@ -350,6 +424,12 @@ article img {
   width: 100%;
   height: 100%;
 }
+
+.social-icons {
+  font-size: 2em;
+
+} */
+
 
 /* ==========================================================================
    Helper classes
@@ -438,35 +518,28 @@ article img {
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
-aside .form {
-  margin-top: 30px;
-}
-input[type="text"] {
-  box-sizing: border-box;
-  width: 100%;
-  color: #2a423a;
-  font-style: italic;
-  padding: 1em;
-}
-input[type="button"] {
-  width: 100%;
-  padding: 20px 0;
-  margin-top: 20px;
-  background-color: #2a423a;
-  font-family: "Poppins", Helvetica, Arial, sans-serif;
-  font-weight: 500;
-  font-size: 1.125em;
-  color: #e2e3ed;
-  border: none;
-  text-align: center;
-  text-transform: uppercase;
-}
+
 @media only screen and (min-width: 768px) {
   /*Tablet styles here*/
+
+  /*General Styles */
+
   .content-wrapper {
     max-width: 640px;
     margin: 100px 0;
   }
+  
+  h2 {
+    font-size: 2.25em;
+    line-height: 1.333;
+  }
+
+  h3 {
+    font-size: 1.5em;
+    line-height: 1.25;
+  }
+
+  /* Header */
   header {
     justify-content: space-between;
     padding: 33px 0;
@@ -481,10 +554,29 @@ input[type="button"] {
   header nav ul {
     justify-content: space-between;
   }
+
+  header figure {
+    width: 30%;
+  }
+
   .header-divider {
     display: none;
   }
-  aside . .content-wrapper {
+
+  /* Hero Area */
+  .hero-area {
+    min-height: 600px;
+  }
+  
+  .hero-area h1 {
+    font-size: 3em;
+    line-height: 1;
+    margin: 0;
+}
+
+/* Aside */
+
+  aside .content-wrapper {
     margin: 50px 0;
     display: flex;
     justify-content: space-between;
@@ -497,6 +589,12 @@ input[type="button"] {
     margin: 0;
   }
 
+  /* Features */
+
+  .features h2 {
+    margin-bottom: 20px;
+  }
+
   .features article {
     display: flex;
     justify-content: center;
@@ -505,34 +603,61 @@ input[type="button"] {
     flex-basis: 50%;
   }
   .features .features-item-description {
-    width: 50%;
+    width: 62%;
   }
+
+  .features i {
+    margin-bottom: 30px;
+  }
+
+  /* Reviews */
 
   .reviews article {
     display: flex;
     justify-content: space-between;
   }
 
-  .reviews article div {
+  .reviews article div,
+  .reviews article figure {
     width: 49%;
   }
-
-  .faq-content {
-    flex-basis: auto;
+  .reviews h2 {
+    width: 85%;
   }
+  .reviews h3 {
+    width: 75%;
+    margin: 100px 0;
+  }
+
+  /* Footer */
+
 
   footer .content-wrapper {
     width: 65%;
     margin: 100px 0;
   }
 
-  .footer-content {
+  footer .footer-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: row;
   }
   footer .contact {
     margin-bottom: 0;
+  }
+  footer h4 {
+    font-size: 1.5em;
+    margin-bottom: 40px;
+  }
+
+  footer p {
+    line-height: 1.285;
+  }
+
+  footer .social-icons {
+    width: 12.5em;
+    justify-content: space-between;
   }
 
   footer .copyright {
@@ -550,6 +675,10 @@ input[type="button"] {
   .mission-content p {
     width: 45%;
   }
+  .map figure {
+    padding-bottom: 45.5%;
+  }
+
   .contact-section .content-wrapper h2 {
     width: 80%;
   }
@@ -558,57 +687,116 @@ input[type="button"] {
     justify-content: space-between;
     align-items: flex-start;
   }
+  .contact-content h4 {
+    font-size: 1.5em;
+  }
+
   /* ========================================================================== FAQ PAGE
 ========================================================================== */
-  .faq .content-wrapper {
-    justify-content: space-between;
-  }
-  .faq-content {
-    flex-basis: 45%;
-  }
-  .faq h2 {
-    width: 100%;
-  }
+  
+.faq .content-wrapper {
+  justify-content: space-between;
 }
+
+.faq-content {
+  flex-basis: 45%;
+}
+
+.faq h2 {
+  width: 100%;
+}
+
+.faq h4,
+.faq p {
+    font-size: .875em;
+    line-height: 1.125;
+}
+
 @media only screen and (min-width: 1200px) {
   /*Desktop styles here*/
+  header {
+    padding: 15px 0;
+  }
   .content-wrapper {
     max-width: 960px;
   }
+  h2 {
+    font-size: 2.25em;
+  }
+  h3,
+  h4 {
+    font-size: 1.875em;
+  }
+
+  p {
+    font-size: 1.125em;
+    line-height: 1.333;
+  }
+
+  /* Hero */
+
   .hero-area h1 {
     width: 80%;
   }
+  /* Aside */
   aside .content-wrapper {
     justify-content: space-around;
   }
   aside .content-wrapper .form-description,
   aside .content-wrapper .form {
-    width: 80%;
+    width: 30%;
   }
+  .form-description p {
+    font-size: 1.125em;
+  }
+
+/* Features */
 
   .features h2 {
-    width: 60%;
+    width: 90%;
   }
+
   .features article {
-    flex-basis: 70%;
+   flex-basis: 33%;
   }
+
+  /* Reviews */
 
   .reviews article div {
-    width: 80%;
+    width: 42%;
   }
 
+  /* Footer */
+  footer h4 {
+    font-size: 1.875em;
+  }
   /* ========================================================================== About Page
 ========================================================================== */
 
+  .map figure {
+    padding-bottom: 37.5%;
+  }
+
   .mission h2,
   .contact-section .content-wrapper h2 {
-    width: ;
+    width: 95%;
+    font-size: 3em;
+  }
+
+  .contact-content h4 {
+    font-size: 1.875em;
   }
 
   /* ========================================================================== FAQ Page
 ========================================================================== */
   .faq h2 {
     width: 100%;
+    font-size: 3em;
+  }
+  .faq h4,
+  faq p {
+    font-size: 1.125em;
+    line-height: 1;
   }
 }
 
